--- a/dice.html
+++ b/dice.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>🎲dice game</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
   </head>
   <body>
     <div class="container">
       <div class="player player-left">
         <div class="player-info">
           <div class="player-name">PLAYER 1</div>
-          <div class="player-score">43</div>
+          <div class="player-score">0</div>
         </div>
         <div class="current-score">
           <div class="current-score-label">CURRENT</div>
@@ -22,14 +23,14 @@
       <div class="player player-right">
         <div class="player-info">
           <div class="player-name">PLAYER 2</div>
-          <div class="player-score">24</div>
+          <div class="player-score">0</div>
         </div>
         <div class="current-score">
           <div class="current-score-label">CURRENT</div>
           <div class="current-score-value">0</div>
         </div>
       </div>
-      <img src="dice-5.png" alt="Dice" class="dice" />
+      <img src="" alt="Dice" class="dice" />
       <button class="btn btn-new">🔄 NEW GAME</button>
       <button class="btn btn-roll">🎲 ROLL DICE</button>
       <button class="btn btn-hold">✋ HOLD</button>
